ittapi-rs/ittapi-sys/src/linux/ittnotify_bindings.rs

pub type __itt_model_record_deallocation_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(addr: *mut ::std::os::raw::c_void)>;
extern "C" {
    pub static mut __itt_model_record_deallocation_ptr__3_0:
        __itt_model_record_deallocation_ptr__3_0_t;
}
pub type __itt_model_induction_uses_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(addr: *mut ::std::os::raw::c_void, size: size_t)>;
extern "C" {
    pub static mut __itt_model_induction_uses_ptr__3_0: __itt_model_induction_uses_ptr__3_0_t;
}
pub type __itt_model_reduction_uses_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(addr: *mut ::std::os::raw::c_void, size: size_t)>;
extern "C" {
    pub static mut __itt_model_reduction_uses_ptr__3_0: __itt_model_reduction_uses_ptr__3_0_t;
}
pub type __itt_model_observe_uses_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(addr: *mut ::std::os::raw::c_void, size: size_t)>;
extern "C" {
    pub static mut __itt_model_observe_uses_ptr__3_0: __itt_model_observe_uses_ptr__3_0_t;
}
pub type __itt_model_clear_uses_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(addr: *mut ::std::os::raw::c_void)>;
extern "C" {
    pub static mut __itt_model_clear_uses_ptr__3_0: __itt_model_clear_uses_ptr__3_0_t;
}
pub type __itt_model_disable_push_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(x: __itt_model_disable)>;
extern "C" {
    pub static mut __itt_model_disable_push_ptr__3_0: __itt_model_disable_push_ptr__3_0_t;
}
pub type __itt_model_disable_pop_ptr__3_0_t = ::std::option::Option<unsafe extern "C" fn()>;
extern "C" {
    pub static mut __itt_model_disable_pop_ptr__3_0: __itt_model_disable_pop_ptr__3_0_t;
}
pub type __itt_model_aggregate_task_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(x: size_t)>;
extern "C" {
    pub static mut __itt_model_aggregate_task_ptr__3_0: __itt_model_aggregate_task_ptr__3_0_t;
}
#[doc = " @defgroup heap Heap"]
#[doc = " @ingroup public"]
#[doc = " Heap group"]
#[doc = " @{"]
pub type __itt_heap_function = *mut ::std::os::raw::c_void;
pub type __itt_heap_function_create_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(
        name: *const ::std::os::raw::c_char,
        domain: *const ::std::os::raw::c_char,
    ) -> __itt_heap_function,
>;
extern "C" {
    pub static mut __itt_heap_function_create_ptr__3_0: __itt_heap_function_create_ptr__3_0_t;
}
pub type __itt_heap_allocate_begin_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(h: __itt_heap_function, size: size_t, initialized: ::std::os::raw::c_int),
>;
extern "C" {
    pub static mut __itt_heap_allocate_begin_ptr__3_0: __itt_heap_allocate_begin_ptr__3_0_t;
}
pub type __itt_heap_allocate_end_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(
        h: __itt_heap_function,
        addr: *mut *mut ::std::os::raw::c_void,
        size: size_t,
        initialized: ::std::os::raw::c_int,
    ),
>;
extern "C" {
    pub static mut __itt_heap_allocate_end_ptr__3_0: __itt_heap_allocate_end_ptr__3_0_t;
}
pub type __itt_heap_free_begin_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(h: __itt_heap_function, addr: *mut ::std::os::raw::c_void),
>;
extern "C" {
    pub static mut __itt_heap_free_begin_ptr__3_0: __itt_heap_free_begin_ptr__3_0_t;
}
pub type __itt_heap_free_end_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(h: __itt_heap_function, addr: *mut ::std::os::raw::c_void),
>;
extern "C" {
    pub static mut __itt_heap_free_end_ptr__3_0: __itt_heap_free_end_ptr__3_0_t;
}
pub type __itt_heap_reallocate_begin_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(
        h: __itt_heap_function,
        addr: *mut ::std::os::raw::c_void,
        new_size: size_t,
        initialized: ::std::os::raw::c_int,
    ),
>;
extern "C" {
    pub static mut __itt_heap_reallocate_begin_ptr__3_0: __itt_heap_reallocate_begin_ptr__3_0_t;
}
pub type __itt_heap_reallocate_end_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(
        h: __itt_heap_function,
        addr: *mut ::std::os::raw::c_void,
        new_addr: *mut *mut ::std::os::raw::c_void,
        new_size: size_t,
        initialized: ::std::os::raw::c_int,
    ),
>;
extern "C" {
    pub static mut __itt_heap_reallocate_end_ptr__3_0: __itt_heap_reallocate_end_ptr__3_0_t;
}
pub type __itt_heap_internal_access_begin_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn()>;
extern "C" {
    pub static mut __itt_heap_internal_access_begin_ptr__3_0:
        __itt_heap_internal_access_begin_ptr__3_0_t;
}
pub type __itt_heap_internal_access_end_ptr__3_0_t = ::std::option::Option<unsafe extern "C" fn()>;
extern "C" {
    pub static mut __itt_heap_internal_access_end_ptr__3_0:
        __itt_heap_internal_access_end_ptr__3_0_t;
}
pub type __itt_heap_record_memory_growth_begin_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn()>;
extern "C" {
    pub static mut __itt_heap_record_memory_growth_begin_ptr__3_0:
        __itt_heap_record_memory_growth_begin_ptr__3_0_t;
}
pub type __itt_heap_record_memory_growth_end_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn()>;
extern "C" {
    pub static mut __itt_heap_record_memory_growth_end_ptr__3_0:
        __itt_heap_record_memory_growth_end_ptr__3_0_t;
}
pub type __itt_heap_reset_detection_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(reset_mask: ::std::os::raw::c_uint)>;
extern "C" {
    pub static mut __itt_heap_reset_detection_ptr__3_0: __itt_heap_reset_detection_ptr__3_0_t;
}
pub type __itt_heap_record_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(record_mask: ::std::os::raw::c_uint)>;
extern "C" {
    pub static mut __itt_heap_record_ptr__3_0: __itt_heap_record_ptr__3_0_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ___itt_domain {
    #[doc = "< Zero if disabled, non-zero if enabled. The meaning of different non-zero values is reserved to the runtime"]
    pub flags: ::std::os::raw::c_int,
    #[doc = "< Copy of original name in ASCII."]
    pub nameA: *const ::std::os::raw::c_char,
    pub nameW: *mut ::std::os::raw::c_void,
    #[doc = "< Reserved to the runtime"]
    pub extra1: ::std::os::raw::c_int,
    #[doc = "< Reserved to the runtime"]
    pub extra2: *mut ::std::os::raw::c_void,
    pub next: *mut ___itt_domain,
}
#[test]
fn bindgen_test_layout____itt_domain() {
    assert_eq!(
        ::std::mem::size_of::<___itt_domain>(),
        48usize,
        concat!("Size of: ", stringify!(___itt_domain))
    );
    assert_eq!(
        ::std::mem::align_of::<___itt_domain>(),
        8usize,
        concat!("Alignment of ", stringify!(___itt_domain))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<___itt_domain>())).flags as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_domain),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<___itt_domain>())).nameA as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_domain),
            "::",
            stringify!(nameA)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<___itt_domain>())).nameW as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_domain),
            "::",
            stringify!(nameW)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<___itt_domain>())).extra1 as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_domain),
            "::",
            stringify!(extra1)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<___itt_domain>())).extra2 as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_domain),
            "::",
            stringify!(extra2)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<___itt_domain>())).next as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_domain),
            "::",
            stringify!(next)
        )
    );
}
pub type __itt_domain = ___itt_domain;
pub type __itt_domain_create_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(name: *const ::std::os::raw::c_char) -> *mut __itt_domain,
>;
extern "C" {
    pub static mut __itt_domain_create_ptr__3_0: __itt_domain_create_ptr__3_0_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ___itt_id {
    pub d1: ::std::os::raw::c_ulonglong,
    pub d2: ::std::os::raw::c_ulonglong,
    pub d3: ::std::os::raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout____itt_id() {
    assert_eq!(
        ::std::mem::size_of::<___itt_id>(),
        24usize,
        concat!("Size of: ", stringify!(___itt_id))
    );
    assert_eq!(
        ::std::mem::align_of::<___itt_id>(),
        8usize,
        concat!("Alignment of ", stringify!(___itt_id))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<___itt_id>())).d1 as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_id),
            "::",
            stringify!(d1)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<___itt_id>())).d2 as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_id),
            "::",
            stringify!(d2)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<___itt_id>())).d3 as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_id),
            "::",
            stringify!(d3)
        )
    );
}
pub type __itt_id = ___itt_id;
extern "C" {
    #[doc = " @endcond"]
    pub static __itt_null: __itt_id;
}
pub type __itt_id_create_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(domain: *const __itt_domain, id: __itt_id)>;
extern "C" {
    pub static mut __itt_id_create_ptr__3_0: __itt_id_create_ptr__3_0_t;
}
pub type __itt_id_destroy_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(domain: *const __itt_domain, id: __itt_id)>;
extern "C" {
    pub static mut __itt_id_destroy_ptr__3_0: __itt_id_destroy_ptr__3_0_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ___itt_string_handle {
    #[doc = "< Copy of original string in ASCII."]
    pub strA: *const ::std::os::raw::c_char,
    pub strW: *mut ::std::os::raw::c_void,
    #[doc = "< Reserved. Must be zero"]
    pub extra1: ::std::os::raw::c_int,
    #[doc = "< Reserved. Must be zero"]
    pub extra2: *mut ::std::os::raw::c_void,
    pub next: *mut ___itt_string_handle,
}
